fix: overflow

--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	scroll-behavior: smooth;
-	overflow-x: visible;
+	overflow-x: hidden;
 }
 
 @media screen and (max-width: 960px) {
